- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    Qt Creator 4.7.2, Qt Creator 4.12.4
- 
    None
- 
        
- 
        b6b6482c72748b42f2ca0993826d3ff859dc64eb (qt-creator/qt-creator/4.13) efa9d258a267f42234bfc30293f2b8eae702166e (qt-creator/qt-creator/master)
How to reproduce:
- Open source file cf.cc ; ;
- Select the last line and call Tools > Beautifier > ClangFormat > Format at Cursor;
- The last line is not formatted.
| For Gerrit Dashboard: QTCREATORBUG-21812 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 314490,5 | Add an action to format code using clang-format by lines | 4.13 | qt-creator/qt-creator | Status: MERGED | +2 | 0 | 
| 315794,3 | Pass the correct positions to clang-format | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |