Pass the correct positions to clang-format

clang-format expects the position in bytes and not in characters.
This offsets the position the more non-latin1 characters the code contains.

Fixes: QTCREATORBUG-21812
Fixes: QTCREATORBUG-23131
Change-Id: I499c44c5364c0623ffba7cd35e6d18659c61d742
Reviewed-by: hjk <hjk@qt.io>